@dev Prepare version 0.3.0.